Fixed the correct js file include

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <script src="main.js"></script>
-  <script src="closures.js"></script>
+  <script src="danny.js"></script>
 </head>
 <body>
   <button class="start">Display users</button>
