--- a/index.html
+++ b/index.html
@@ -1,41 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Javascript stuff</title>
-  <link rel=stylesheet href="main.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-  <script src="main.js"></script>
-  <script src="closures.js"></script>
+    <title>Javascript stuff</title>
+    <link rel=stylesheet href="main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="main.js"></script>
+    <script src="async-callback.js"></script>
 </head>
+
 <body>
-  <button class="start">Display users</button>
-  <button class="reset">Reset</button>
-  <button class="reset">BAM</button>
-  <hr/>
-  <div id="content"></div>
-  <div id="time"></div>
-
-  <select id='timerSelector'>
-    <option value="0">select</option>
-    <option value="1">1 sec</option>
-    <option value="2">2 sec</option>
-    <option value="3">3 sec</option>
-    <option value="4">4 sec</option>
-  </select>
-
-<div id="timeWrapper">
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-</div>
-
+    <div id="content"></div>
+    <div id="time"></div>
+    <div id="timeWrapper">
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+        <div class="timebox"></div>
+    </div>
 </body>
+
 </html>
