--- a/index.html
+++ b/index.html
@@ -5,37 +5,11 @@
   <link rel=stylesheet href="main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <script src="main.js"></script>
-  <script src="closures.js"></script>
 </head>
 <body>
-  <button class="start">Display users</button>
-  <button class="reset">Reset</button>
-  <button class="reset">BAM</button>
+  <button class="start">Start</button>
   <hr/>
   <div id="content"></div>
-  <div id="time"></div>
-
-  <select id='timerSelector'>
-    <option value="0">select</option>
-    <option value="1">1 sec</option>
-    <option value="2">2 sec</option>
-    <option value="3">3 sec</option>
-    <option value="4">4 sec</option>
-  </select>
-
-<div id="timeWrapper">
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-  <div class="timebox"></div>
-</div>
 
 </body>
 </html>
