--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Javascript stuff</title>
+  <title>Js</title>
   <link rel=stylesheet href="main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <script src="main.js"></script>
 </head>
 <body>
-  <button class="start">Start</button>
+  <button class="start">START</button>
   <hr/>
   <div id="content"></div>
 
