--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="main.js"></script>
 </head>
 <body>
-  <button class="start">START</button>
+  <button class="trigger">TRIGGER</button>
   <hr/>
   <div id="content"></div>
 
