--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <button class="trigger">TRIGGER</button>
+  <button class="trigger">TRIGGER1</button>
   <hr/>
   <div id="content"></div>
 
